k8s/applications/apigateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  annotations:
    kubernetes.io/change-cause: "Initialized by manifest files."
  labels:
    env: production
    tier: backend
    app: apigateway
    name: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      env: production
      tier: backend
      app: apigateway
      name: apigateway-pod
  template:
    metadata:
      labels:
        env: production
        tier: backend
        app: apigateway
        name: apigateway-pod
    spec:
      nodeSelector:
        apigateway: apigateway
      containers:
        - name: apigateway
          image: meetravel/meetravel-backend-apigateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
