k8s/applications/apigateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-00cbff553eb8318ef, subnet-034bd15305a16c645 # only private subnets
  labels:
    env: production
    tier: backend
    app: apigateway
    name: apigateway-ingress
spec:
  ingressClassName: alb
  rules:
#    - host: <백엔드 게이트웨이 도메인> # TODO
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 8000
